--- a/roster.html
+++ b/roster.html
@@ -269,7 +269,6 @@
 <tr><td>LAR</td><td>Matthew Stafford       </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>BUF</td><td>James Cook             </td></tr>
-<tr><td>BUF</td><td>Ray Davis              </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>LAR</td><td>Puka Nacua             </td></tr>
 <tr><td> TB</td><td>Mike Evans             </td></tr>
@@ -279,6 +278,7 @@
 <tr><td>BUF</td><td>Khalil Shakir          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>BUF</td><td>Dalton Kincaid         </td></tr>
+<tr><td>BUF</td><td>Dawson Knox            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>HOU</td><td>Ka'imi Fairbairn       </td></tr>
 <tr><td>CIN</td><td>Evan McPherson         </td></tr>
