--- a/pickups.html
+++ b/pickups.html
@@ -291,8 +291,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>3)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Dawson Knox/Ray Davis</td>
+<td width=50>10/13</td>
 </tr></table></td>
 </tr>
 <tr>
