--- a/pickups.html
+++ b/pickups.html
@@ -6,8 +6,8 @@
 <tr>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Romeo Doubs/Calvin Ridley</td>
+<td width=50>10/14</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>1)</td>
@@ -87,8 +87,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Kimani Vidal/Michael Carter</td>
+<td width=50>10/14</td>
 </tr></table></td>
 </tr>
 <tr>
@@ -227,8 +227,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>3)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Tez Johnson/David Njoku</td>
+<td width=50>10/14</td>
 </tr></table></td>
 </tr>
 <tr>
@@ -343,5 +343,10 @@ John - Jason Myers/Graham Gano (10/10)
 <td width=600>
 Sam - Justin Herbert<br>
 Randy - Travis Etienne
+</td></tr>
+<tr><td width=50>10/14</td>
+<td width=600>
+States - Ollie Gordon<br>
+John - Zach Ertz
 </td></tr>
 </table>
