--- a/roster.html
+++ b/roster.html
@@ -16,9 +16,9 @@
 <tr><td> SF</td><td>Brian Robinson         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>SEA</td><td>Jaxon Smith-Njigba     </td></tr>
-<tr><td>TEN</td><td>Calvin Ridley          </td></tr>
 <tr><td> LV</td><td>Jakobi Meyers          </td></tr>
 <tr><td>IND</td><td>Michael Pittman        </td></tr>
+<tr><td> GB</td><td>Romeo Doubs            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> KC</td><td>Travis Kelce           </td></tr>
 <tr><td height=9></td><td></td></tr>
@@ -78,7 +78,6 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td>DEN</td><td>Evan Engram            </td></tr>
 <tr><td>BAL</td><td>Isaiah Likely          </td></tr>
-<tr><td>WAS</td><td>Zach Ertz              </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>DAL</td><td>Brandon Aubrey         </td></tr>
 <tr><td height=9></td><td></td></tr>
@@ -86,6 +85,7 @@
 <tr><td> NE</td><td>Andy Borregales        </td></tr>
 <tr><td> GB</td><td>Matthew Golden         </td></tr>
 <tr><td> SF</td><td>Jordan James           </td></tr>
+<tr><td>MIA</td><td>Ollie Gordon           </td></tr>
 </table>
 </td>
 </tr>
@@ -101,7 +101,7 @@
 <tr><td>PIT</td><td>Jaylen Warren          </td></tr>
 <tr><td>PHI</td><td>Will Shipley           </td></tr>
 <tr><td>LAR</td><td>Blake Corum            </td></tr>
-<tr><td>ARI</td><td>Michael Carter         </td></tr>
+<tr><td>LAC</td><td>Kimani Vidal           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>HOU</td><td>Nico Collins           </td></tr>
 <tr><td>PIT</td><td>DK Metcalf             </td></tr>
@@ -221,15 +221,15 @@
 <tr><td>DAL</td><td>George Pickens         </td></tr>
 <tr><td> SF</td><td>Jauan Jennings         </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td>CLE</td><td>David Njoku            </td></tr>
+<tr><td>WAS</td><td>Zach Ertz              </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>TEN</td><td>Joey Slye              </td></tr>
 <tr><td>SEA</td><td>Jason Myers            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>TEN</td><td>Cam Ward               </td></tr>
-<tr><td>MIA</td><td>Ollie Gordon           </td></tr>
 <tr><td>CLE</td><td>Dillon Gabriel         </td></tr>
 <tr><td>HOU</td><td>Woody Marks            </td></tr>
+<tr><td> TB</td><td>Tez Johnson            </td></tr>
 </table>
 </td>
 <td valign=top>
