--- a/week7.html
+++ b/week7.html
@@ -81,13 +81,13 @@
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Matthew (7)</b></font></td></tr>
 <tr><td>DJones</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Dobbins</td>       <td></td><td align=right>0</td></tr>
 <tr><td>JTaylor</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Dobbins</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Worthy</td>        <td></td><td align=right>0</td></tr>
 <tr><td>KAllen</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Samuel</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Fannin</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Kittle</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Dicker</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Blue</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Fannin</td>        <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
