--- a/roster.html
+++ b/roster.html
@@ -279,9 +279,9 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td>BUF</td><td>Dalton Kincaid         </td></tr>
 <tr><td>BUF</td><td>Dawson Knox            </td></tr>
+<tr><td>SEA</td><td>AJ Barner              </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>HOU</td><td>Ka'imi Fairbairn       </td></tr>
-<tr><td>CIN</td><td>Evan McPherson         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>LAC</td><td>Omarion Hampton        </td></tr>
 <tr><td>JAX</td><td>Travis Hunter          </td></tr>
