--- a/pickups.html
+++ b/pickups.html
@@ -303,8 +303,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>4)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>AJ Barner/Evan McPherson</td>
+<td width=50>10/20</td>
 </tr></table></td>
 </tr>
 <tr>
