--- a/thousand.html
+++ b/thousand.html
@@ -729,6 +729,12 @@
     <td>1070</td>
     <td>John</td>
     <td>565</td></tr>
+<tr><td>2025</td>
+    <td>Week 7</td>
+    <td>Grant Mydland</td>
+    <td>1070</td>
+    <td>Roger</td>
+    <td>655</td></tr>
 <tr><td>1994</td>
     <td>Week 10</td>
     <td>Grant Mydland</td>
