--- a/week8.html
+++ b/week8.html
@@ -10,11 +10,11 @@
 <tr><td>Hurts</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Mason</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Swift</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Smith-Njigba</td>  <td></td><td align=right>0</td></tr>
+<tr><td>Doubs</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Pittman</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Kelce</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Butker</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Jeanty</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Fitzgerald</td>    <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
@@ -111,11 +111,11 @@
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Randy (9)</b></font></td></tr>
 <tr><td>Maye</td>          <td></td><td align=right>0</td></tr>
 <tr><td>BHall</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Etienne</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Pacheco</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Jefferson</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Lamb</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Ferguson</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Bates</td>         <td></td><td align=right>0</td></tr>
+<tr><td>-</td>             <td></td><td align=right>0</td></tr>
 <tr><td>Dart</td>          <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
