--- a/roster.html
+++ b/roster.html
@@ -65,11 +65,11 @@
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>States (3)</b></font></td></tr>
 <tr><td>WAS</td><td>Jayden Daniels         </td></tr>
 <tr><td>ARI</td><td>Kyler Murray           </td></tr>
+<tr><td>WAS</td><td>Marcus Mariota         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>MIA</td><td>De'Von Achane          </td></tr>
 <tr><td>MIN</td><td>Aaron Jones            </td></tr>
 <tr><td>HOU</td><td>Nick Chubb             </td></tr>
-<tr><td> SF</td><td>Isaac Guerendo         </td></tr>
 <tr><td>BAL</td><td>Justice Hill           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>CIN</td><td>Ja'Marr Chase          </td></tr>
