--- a/roster.html
+++ b/roster.html
@@ -237,7 +237,6 @@
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>Randy (9)</b></font></td></tr>
 <tr><td>HOU</td><td>CJ Stroud              </td></tr>
 <tr><td>JAX</td><td>Trevor Lawrence        </td></tr>
-<tr><td>CIN</td><td>Jake Browning          </td></tr>
 <tr><td> NE</td><td>Drake Maye             </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>NYJ</td><td>Breece Hall            </td></tr>
@@ -254,6 +253,7 @@
 <tr><td>DAL</td><td>Jake Ferguson          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>DET</td><td>Jake Bates             </td></tr>
+<tr><td> GB</td><td>Brandon McManus        </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> NE</td><td>TreVeyon Henderson     </td></tr>
 <tr><td>NYG</td><td>Jaxson Dart            </td></tr>
