--- a/pickups.html
+++ b/pickups.html
@@ -286,8 +286,8 @@
 <tr>
 <td><table><tr>
 <td width=15>3)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Brandon McManus/Jake Browning</td>
+<td width=50>10/26</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>3)</td>
