--- a/thousand.html
+++ b/thousand.html
@@ -189,6 +189,12 @@
     <td>1245</td>
     <td>Matthew</td>
     <td>660</td></tr>
+<tr><td>2025</td>
+    <td>Week 8</td>
+    <td>Matthew Edwards</td>
+    <td>1245</td>
+    <td>Mike</td>
+    <td>530</td></tr>
 <tr><td>2013</td>
     <td>Week 1</td>
     <td>Grant Mydland</td>
@@ -1113,6 +1119,12 @@
     <td>1020</td>
     <td>Sam</td>
     <td>460</td></tr>
+<tr><td>2025</td>
+    <td>Week 8</td>
+    <td>Grant Mydland</td>
+    <td>1020</td>
+    <td>Steven</td>
+    <td>635</td></tr>
 <tr><td>1998</td>
     <td>Week 13</td>
     <td>Steve Butler</td>
@@ -1317,4 +1329,10 @@
     <td>1000</td>
     <td>John</td>
     <td>795</td></tr>
+<tr><td>2025</td>
+    <td>Week 8</td>
+    <td>Roger Bakos</td>
+    <td>1000</td>
+    <td>Rich</td>
+    <td>800</td></tr>
 </table>
