--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 <a href="week5.html"><b>5</b></a>
 <a href="week6.html"><b>6</b></a>
 <a href="week7.html"><b>7</b></a>
-<a href="week8.html"><b>8P</b></a><br>
+<a href="week8.html"><b>8</b></a>
+<a href="week9.html"><b>9P</b></a><br>
 <a href="roster.html"><b>Roster</b></a><br>
 <a href="pickups.html"><b>Pickups & Trades</b></a><br>
 <a href="leader.html"><b>Current Leaderboard</b></a><br>
@@ -67,41 +68,41 @@
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Weeks Won</b></font></td></tr>
 <tr><td><font size=2>Rich(5)</font></td>
     <td><font size=2>6</font></td>
-    <td><font size=2>1</font></td>
-    <td><font size=2>4735</font></td>
-    <td><font size=2>3370</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>5535</font></td>
+    <td><font size=2>4370</font></td>
     <td><font size=2>945</font></td>
     <td><font size=2>455</font></td>
     <td><font size=2>1</font></td>
+<tr><td><font size=2>Matthew(7)</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>5100</font></td>
+    <td><font size=2>4795</font></td>
+    <td><font size=2>1245</font></td>
+    <td><font size=2>285</font></td>
+    <td><font size=2>1</font></td>
 <tr><td><font size=2>Randy(9)</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>4020</font></td>
-    <td><font size=2>3450</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>4780</font></td>
+    <td><font size=2>4235</font></td>
     <td><font size=2>915</font></td>
     <td><font size=2>265</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>States(3)</font></td>
     <td><font size=2>3</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>4220</font></td>
-    <td><font size=2>5500</font></td>
+    <td><font size=2>5</font></td>
+    <td><font size=2>4600</font></td>
+    <td><font size=2>5960</font></td>
     <td><font size=2>890</font></td>
     <td><font size=2>180</font></td>
     <td><font size=2>2</font></td>
-<tr><td><font size=2>Matthew(7)</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>3855</font></td>
-    <td><font size=2>4265</font></td>
-    <td><font size=2>750</font></td>
-    <td><font size=2>285</font></td>
-    <td><font size=2>0</font></td>
 <tr><td><font size=2>Steven(1)</font></td>
     <td><font size=2>1</font></td>
-    <td><font size=2>6</font></td>
-    <td><font size=2>4660</font></td>
-    <td><font size=2>4995</font></td>
+    <td><font size=2>7</font></td>
+    <td><font size=2>5295</font></td>
+    <td><font size=2>6015</font></td>
     <td><font size=2>830</font></td>
     <td><font size=2>560</font></td>
     <td><font size=2>0</font></td>
@@ -114,42 +115,42 @@
     <td><font size=2></font></td>
     <td><font size=2></font></td></tr>
 <tr><td><font size=2>Grant(6)</font></td>
-    <td><font size=2>6</font></td>
+    <td><font size=2>7</font></td>
     <td><font size=2>1</font></td>
-    <td><font size=2>5165</font></td>
-    <td><font size=2>4245</font></td>
+    <td><font size=2>6185</font></td>
+    <td><font size=2>4880</font></td>
     <td><font size=2>1070</font></td>
     <td><font size=2>340</font></td>
     <td><font size=2>2</font></td>
 <tr><td><font size=2>Roger(10)</font></td>
-    <td><font size=2>4</font></td>
+    <td><font size=2>5</font></td>
     <td><font size=2>3</font></td>
-    <td><font size=2>4505</font></td>
-    <td><font size=2>4595</font></td>
+    <td><font size=2>5505</font></td>
+    <td><font size=2>5395</font></td>
     <td><font size=2>1120</font></td>
     <td><font size=2>295</font></td>
     <td><font size=2>1</font></td>
-<tr><td><font size=2>Mike(2)</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>4160</font></td>
-    <td><font size=2>4085</font></td>
-    <td><font size=2>860</font></td>
-    <td><font size=2>160</font></td>
-    <td><font size=2>1</font></td>
 <tr><td><font size=2>Sam(4)</font></td>
-    <td><font size=2>3</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>3685</font></td>
-    <td><font size=2>3880</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>4470</font></td>
+    <td><font size=2>4640</font></td>
     <td><font size=2>785</font></td>
     <td><font size=2>305</font></td>
     <td><font size=2>0</font></td>
-<tr><td><font size=2>John(8)</font></td>
-    <td><font size=2>2</font></td>
+<tr><td><font size=2>Mike(2)</font></td>
+    <td><font size=2>3</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>4050</font></td>
-    <td><font size=2>4670</font></td>
+    <td><font size=2>4690</font></td>
+    <td><font size=2>5330</font></td>
+    <td><font size=2>860</font></td>
+    <td><font size=2>160</font></td>
+    <td><font size=2>1</font></td>
+<tr><td><font size=2>John(8)</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>5</font></td>
+    <td><font size=2>4510</font></td>
+    <td><font size=2>5050</font></td>
     <td><font size=2>795</font></td>
     <td><font size=2>425</font></td>
     <td><font size=2>0</font></td>
