--- a/pickups.html
+++ b/pickups.html
@@ -151,8 +151,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Kayshon Boutte/Matt Gay</td>
+<td width=50>10/29</td>
 </tr></table></td>
 </tr>
 <tr>
@@ -337,7 +337,8 @@ Sam - Spencer Shrader/Tyreek Hill (10/1)<br>
 Randy - Jake Ferguson/Braelon Allen (10/4)<br>
 John - Rico Dowdle/Trey Benson (10/7)<br>
 Sam - Michael Carter/Spencer Shrader (10/7)<br>
-John - Jason Myers/Graham Gano (10/10)
+John - Jason Myers/Graham Gano (10/10)<br>
+Grant - Tyrone Tracy/Cam Skattebo (10/29)
 </td></tr>
 <tr><td width=50>9/16</td>
 <td width=600>
