--- a/roster.html
+++ b/roster.html
@@ -157,20 +157,20 @@
 <tr><td>HOU</td><td>Joe Mixon              </td></tr>
 <tr><td>BAL</td><td>Keaton Mitchell        </td></tr>
 <tr><td>TEN</td><td>Tyjae Spears           </td></tr>
+<tr><td>NYG</td><td>Tyrone Tracy           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>ATL</td><td>Drake London           </td></tr>
 <tr><td>WAS</td><td>Terry McLaurin         </td></tr>
 <tr><td>DEN</td><td>Courtland Sutton       </td></tr>
 <tr><td> SF</td><td>Ricky Pearsall         </td></tr>
 <tr><td>LAC</td><td>Quentin Johnston       </td></tr>
+<tr><td> NE</td><td>Kayshon Boutte         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>ARI</td><td>Trey McBride           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>PIT</td><td>Chris Boswell          </td></tr>
-<tr><td>WAS</td><td>Matt Gay               </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>DEN</td><td>RJ Harvey              </td></tr>
-<tr><td>NYG</td><td>Cam Skattebo           </td></tr>
 <tr><td>NYJ</td><td>Mason Taylor           </td></tr>
 </table>
 </td>
