--- a/week9.html
+++ b/week9.html
@@ -51,11 +51,11 @@
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Sam (4)</b></font></td></tr>
 <tr><td>Prescott</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Barkley</td>       <td></td><td align=right>0</td></tr>
-<tr><td>JWarren</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Egbuka</td>        <td></td><td align=right>0</td></tr>
+<tr><td>KWilliams</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Vidal</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Collins</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Metcalf</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Goedert</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Pitts</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Lutz</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Loop</td>          <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
@@ -126,12 +126,12 @@
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Randy (9)</b></font></td></tr>
 <tr><td>Maye</td>          <td></td><td align=right>0</td></tr>
-<tr><td>BHall</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Pacheco</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Jefferson</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Etienne</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Henderson</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Lamb</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Ferguson</td>      <td></td><td align=right>0</td></tr>
-<tr><td>McManus</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Jefferson</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Bowers</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Bates</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Dart</td>          <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
