--- a/roster.html
+++ b/roster.html
@@ -37,6 +37,7 @@
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>Mike (2)</b></font></td></tr>
 <tr><td> TB</td><td>Baker Mayfield         </td></tr>
 <tr><td>MIA</td><td>Tua Tagovailoa         </td></tr>
+<tr><td>PIT</td><td>Aaron Rodgers          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>ATL</td><td>Bijan Robinson         </td></tr>
 <tr><td> TB</td><td>Bucky Irving           </td></tr>
@@ -56,7 +57,6 @@
 <tr><td>PHI</td><td>Jake Elliott           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>IND</td><td>Tyler Warren           </td></tr>
-<tr><td> LV</td><td>Dont'e Thornton        </td></tr>
 <tr><td>CLE</td><td>Dylan Sampson          </td></tr>
 </table>
 </td>
