--- a/pickups.html
+++ b/pickups.html
@@ -47,8 +47,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>4)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Eddy Pineiro/Keon Coleman</td>
+<td width=50>11/1</td>
 </tr></table></td>
 </tr>
 <tr>
@@ -163,8 +163,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>3)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Quinn Ewers/Joe Mixon</td>
+<td width=50>10/31</td>
 </tr></table></td>
 </tr>
 <tr>
