--- a/roster.html
+++ b/roster.html
@@ -49,12 +49,12 @@
 <tr><td>LAC</td><td>Ladd McConkey          </td></tr>
 <tr><td>LAR</td><td>Davante Adams          </td></tr>
 <tr><td> KC</td><td>Rashee Rice            </td></tr>
-<tr><td>BUF</td><td>Keon Coleman           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>DET</td><td>Sam LaPorta            </td></tr>
 <tr><td> NE</td><td>Hunter Henry           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>PHI</td><td>Jake Elliott           </td></tr>
+<tr><td> SF</td><td>Eddy Pineiro           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>IND</td><td>Tyler Warren           </td></tr>
 <tr><td>CLE</td><td>Dylan Sampson          </td></tr>
@@ -154,7 +154,6 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td> SF</td><td>Christian McCaffrey    </td></tr>
 <tr><td> GB</td><td>Josh Jacobs            </td></tr>
-<tr><td>HOU</td><td>Joe Mixon              </td></tr>
 <tr><td>BAL</td><td>Keaton Mitchell        </td></tr>
 <tr><td>TEN</td><td>Tyjae Spears           </td></tr>
 <tr><td>NYG</td><td>Tyrone Tracy           </td></tr>
@@ -172,6 +171,7 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td>DEN</td><td>RJ Harvey              </td></tr>
 <tr><td>NYJ</td><td>Mason Taylor           </td></tr>
+<tr><td>MIA</td><td>Quinn Ewers            </td></tr>
 </table>
 </td>
 </tr>
