--- a/pickups.html
+++ b/pickups.html
@@ -298,8 +298,8 @@
 <tr>
 <td><table><tr>
 <td width=15>4)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Isaiah Davis/Isiah Pacheco</td>
+<td width=50>11/2</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>4)</td>
