--- a/roster.html
+++ b/roster.html
@@ -240,9 +240,9 @@
 <tr><td> NE</td><td>Drake Maye             </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>NYJ</td><td>Breece Hall            </td></tr>
-<tr><td> KC</td><td>Isiah Pacheco          </td></tr>
 <tr><td> NE</td><td>Rhamondre Stevenson    </td></tr>
 <tr><td>JAX</td><td>Travis Etienne         </td></tr>
+<tr><td>NYJ</td><td>Isaiah Davis           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>MIN</td><td>Justin Jefferson       </td></tr>
 <tr><td>DAL</td><td>CeeDee Lamb            </td></tr>
