--- a/roster.html
+++ b/roster.html
@@ -127,7 +127,6 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td>DET</td><td>Jahmyr Gibbs           </td></tr>
 <tr><td>TEN</td><td>Tony Pollard           </td></tr>
-<tr><td>PHI</td><td>Tank Bigsby            </td></tr>
 <tr><td> TB</td><td>Rachaad White          </td></tr>
 <tr><td>MIN</td><td>Zavier Scott           </td></tr>
 <tr><td height=9></td><td></td></tr>
@@ -141,6 +140,7 @@
 <tr><td> GB</td><td>Tucker Kraft           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> TB</td><td>Chase McLaughlin       </td></tr>
+<tr><td>IND</td><td>Mike Badgley           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>CAR</td><td>Tetairoa McMillan      </td></tr>
 <tr><td>TEN</td><td>Elic Ayomanor          </td></tr>
