--- a/week9.html
+++ b/week9.html
@@ -9,12 +9,12 @@
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Steven (1)</b></font></td></tr>
 <tr><td>CWilliams</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Jeanty</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Swift</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Walker</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Smith-Njigba</td>  <td></td><td align=right>0</td></tr>
 <tr><td>Pittman</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Kelce</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Butker</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Fitzgerald</td>    <td></td><td align=right>0</td></tr>
+<tr><td>Monangai</td>      <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
@@ -72,7 +72,7 @@
 <tr><td>St Brown</td>      <td></td><td align=right>0</td></tr>
 <tr><td>DMoore</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Kraft</td>         <td></td><td align=right>0</td></tr>
-<tr><td>-</td>             <td></td><td align=right>0</td></tr>
+<tr><td>Badgley</td>       <td></td><td align=right>0</td></tr>
 <tr><td>McMillan</td>      <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
