--- a/week9.html
+++ b/week9.html
@@ -24,7 +24,7 @@
 <tr><td>Rodgers</td>       <td></td><td align=right>0</td></tr>
 <tr><td>BRobinson</td>     <td></td><td align=right>0</td></tr>
 <tr><td>JWilliams</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Thomas</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Rice</td>          <td></td><td align=right>0</td></tr>
 <tr><td>McConkey</td>      <td></td><td align=right>0</td></tr>
 <tr><td>LaPorta</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Pineiro</td>       <td></td><td align=right>0</td></tr>
@@ -98,9 +98,9 @@
 <tr><td>Nix</td>           <td></td><td align=right>0</td></tr>
 <tr><td>McCaffrey</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Jacobs</td>        <td></td><td align=right>0</td></tr>
-<tr><td>McLaurin</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Sutton</td>        <td></td><td align=right>0</td></tr>
-<tr><td>MTaylor</td>       <td></td><td align=right>0</td></tr>
+<tr><td>London</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Johnston</td>      <td></td><td align=right>0</td></tr>
+<tr><td>McBride</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Boswell</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Harvey</td>        <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
