--- a/thousand.html
+++ b/thousand.html
@@ -819,6 +819,12 @@
     <td>1060</td>
     <td>Steven</td>
     <td>435</td></tr>
+<tr><td>2025</td>
+    <td>Week 9</td>
+    <td>Grant Mydland</td>
+    <td>1060</td>
+    <td>Matthew</td>
+    <td>575</td></tr>
 <tr><td>2006</td>
     <td>Week 11</td>
     <td>Randy Edwards</td>
