--- a/freeagt.html
+++ b/freeagt.html
@@ -1,119 +1,119 @@
 <table border=0 cellspacing=0 cellpadding=2 width=100><tr>
 <td bgcolor=#802080 valign=center height=3 nowrap rowspan=2 width=705>
-<b><font size=6 color='white'><center>2025 Free Agent Leaderboard<br>(Through week 8)</font></b>&nbsp;&nbsp;</td></tr>
+<b><font size=6 color='white'><center>2025 Free Agent Leaderboard<br>(Through week 9)</font></b>&nbsp;&nbsp;</td></tr>
 </table>
 <table cellspacing=1><tr><td valign=top>
 <table width=260 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=3><font size=5 color='yellow'><center>Quarterbacks</td></tr>
-<tr><td><font size=3>1)</td><td><font size=3>Aaron Rodgers          </td><td><font size=3>1030</td></tr>
-<tr><td><font size=3>2)</td><td><font size=3>Sam Darnold            </td><td><font size=3> 910</td></tr>
-<tr><td><font size=3>3)</td><td><font size=3>Joe Flacco             </td><td><font size=3> 665</td></tr>
-<tr><td><font size=3>4)</td><td><font size=3>Mac Jones              </td><td><font size=3> 585</td></tr>
-<tr><td><font size=3>5)</td><td><font size=3>Spencer Rattler        </td><td><font size=3> 565</td></tr>
-<tr><td><font size=3>6)</td><td><font size=3>Geno Smith             </td><td><font size=3> 495</td></tr>
-<tr><td><font size=3>7)</td><td><font size=3>Michael Penix          </td><td><font size=3> 490</td></tr>
-<tr><td><font size=3>8)</td><td><font size=3>Jake Browning          </td><td><font size=3> 470</td></tr>
-<tr><td><font size=3>9)</td><td><font size=3>Carson Wentz           </td><td><font size=3> 370</td></tr>
-<tr><td><font size=3>10)</td><td><font size=3>Russell Wilson         </td><td><font size=3> 335</td></tr>
-<tr><td><font size=3>11)</td><td><font size=3>Jacoby Brissett        </td><td><font size=3> 270</td></tr>
-<tr><td><font size=3>12)</td><td><font size=3>JJ McCarthy            </td><td><font size=3> 230</td></tr>
-<tr><td><font size=3>13)</td><td><font size=3>Tyrod Taylor           </td><td><font size=3> 100</td></tr>
-<tr><td><font size=3>14)</td><td><font size=3>Tyler Huntley          </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>15)</td><td><font size=3>Joe Milton             </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>1)</td><td><font size=3>Sam Darnold            </td><td><font size=3>1240</td></tr>
+<tr><td><font size=3>2)</td><td><font size=3>Joe Flacco             </td><td><font size=3>1010</td></tr>
+<tr><td><font size=3>3)</td><td><font size=3>Geno Smith             </td><td><font size=3> 740</td></tr>
+<tr><td><font size=3>4)</td><td><font size=3>Mac Jones              </td><td><font size=3> 690</td></tr>
+<tr><td><font size=3>5)</td><td><font size=3>Michael Penix          </td><td><font size=3> 620</td></tr>
+<tr><td><font size=3>6)</td><td><font size=3>Spencer Rattler        </td><td><font size=3> 565</td></tr>
+<tr><td><font size=3>7)</td><td><font size=3>Jake Browning          </td><td><font size=3> 470</td></tr>
+<tr><td><font size=3>8)</td><td><font size=3>Jacoby Brissett        </td><td><font size=3> 435</td></tr>
+<tr><td><font size=3>9)</td><td><font size=3>JJ McCarthy            </td><td><font size=3> 430</td></tr>
+<tr><td><font size=3>10)</td><td><font size=3>Carson Wentz           </td><td><font size=3> 370</td></tr>
+<tr><td><font size=3>11)</td><td><font size=3>Russell Wilson         </td><td><font size=3> 335</td></tr>
+<tr><td><font size=3>12)</td><td><font size=3>Tyrod Taylor           </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>13)</td><td><font size=3>Tyler Huntley          </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>14)</td><td><font size=3>Joe Milton             </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>15)</td><td><font size=3>Joe Burrow             </td><td><font size=3>  50</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Running Backs</td></tr>
 <tr><td><font size=3>Jeremy McNichols       </td><td><font size=3> 265</td></tr>
+<tr><td><font size=3>Isiah Pacheco          </td><td><font size=3> 250</td></tr>
 <tr><td><font size=3>Kenneth Gainwell       </td><td><font size=3> 195</td></tr>
 <tr><td><font size=3>Samaje Perine          </td><td><font size=3> 195</td></tr>
-<tr><td><font size=3>Tyrone Tracy           </td><td><font size=3> 150</td></tr>
+<tr><td><font size=3>Chris Rodriguez        </td><td><font size=3> 155</td></tr>
+<tr><td><font size=3>Brittain Brown         </td><td><font size=3> 150</td></tr>
+<tr><td><font size=3>Emari Demercado        </td><td><font size=3> 150</td></tr>
 <tr><td><font size=3>Sean Tucker            </td><td><font size=3> 150</td></tr>
 <tr><td><font size=3>Kendre Miller          </td><td><font size=3> 130</td></tr>
 <tr><td><font size=3>Bam Knight             </td><td><font size=3> 125</td></tr>
-<tr><td><font size=3>Emari Demercado        </td><td><font size=3> 115</td></tr>
 <tr><td><font size=3>Braelon Allen          </td><td><font size=3> 100</td></tr>
 <tr><td><font size=3>Cam Akers              </td><td><font size=3>  75</td></tr>
 <tr><td><font size=3>Michael Carter         </td><td><font size=3>  75</td></tr>
 <tr><td><font size=3>Ray Davis              </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>Chris Rodriguez        </td><td><font size=3>  75</td></tr>
 <tr><td><font size=3>Miles Sanders          </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>Ameer Abdullah         </td><td><font size=3>  50</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Wide Receivers</td></tr>
-<tr><td><font size=3>Kayshon Boutte         </td><td><font size=3> 630</td></tr>
 <tr><td><font size=3>Tre Tucker             </td><td><font size=3> 485</td></tr>
-<tr><td><font size=3>Troy Franklin          </td><td><font size=3> 390</td></tr>
+<tr><td><font size=3>Troy Franklin          </td><td><font size=3> 395</td></tr>
 <tr><td><font size=3>Wan'Dale Robinson      </td><td><font size=3> 380</td></tr>
+<tr><td><font size=3>Marquise Brown         </td><td><font size=3> 355</td></tr>
 <tr><td><font size=3>Tyquan Thornton        </td><td><font size=3> 355</td></tr>
+<tr><td><font size=3>Parker Washington      </td><td><font size=3> 355</td></tr>
+<tr><td><font size=3>DeMario Douglas        </td><td><font size=3> 335</td></tr>
 <tr><td><font size=3>Luke McCaffrey         </td><td><font size=3> 330</td></tr>
-<tr><td><font size=3>Marquise Brown         </td><td><font size=3> 320</td></tr>
-<tr><td><font size=3>Parker Washington      </td><td><font size=3> 310</td></tr>
-<tr><td><font size=3>Rashid Shaheed         </td><td><font size=3> 290</td></tr>
+<tr><td><font size=3>Rashid Shaheed         </td><td><font size=3> 320</td></tr>
 <tr><td><font size=3>Malik Washington       </td><td><font size=3> 275</td></tr>
 <tr><td><font size=3>Marvin Mims            </td><td><font size=3> 270</td></tr>
+<tr><td><font size=3>Josh Downs             </td><td><font size=3> 250</td></tr>
 <tr><td><font size=3>DeAndre Hopkins        </td><td><font size=3> 230</td></tr>
 <tr><td><font size=3>Xavier Hutchinson      </td><td><font size=3> 225</td></tr>
-<tr><td><font size=3>DeMario Douglas        </td><td><font size=3> 210</td></tr>
-<tr><td><font size=3>Tutu Atwell            </td><td><font size=3> 200</td></tr>
+<tr><td><font size=3>Calvin Austin          </td><td><font size=3> 210</td></tr>
 </table>
 </td></tr><tr><td valign=top>
 <table width=260 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=3><font size=5 color='yellow'><center>Tight Ends</td></tr>
-<tr><td><font size=3>1)</td><td><font size=3>Theo Johnson           </td><td><font size=3> 330</td></tr>
-<tr><td><font size=3>2)</td><td><font size=3>Jake Tonges            </td><td><font size=3> 325</td></tr>
-<tr><td><font size=3>3)</td><td><font size=3>Darren Waller          </td><td><font size=3> 285</td></tr>
-<tr><td><font size=3>4)</td><td><font size=3>Pat Freiermuth         </td><td><font size=3> 255</td></tr>
-<tr><td><font size=3>5)</td><td><font size=3>Juwan Johnson          </td><td><font size=3> 195</td></tr>
-<tr><td><font size=3>6)</td><td><font size=3>Daniel Bellinger       </td><td><font size=3> 190</td></tr>
-<tr><td><font size=3>7)</td><td><font size=3>David Njoku            </td><td><font size=3> 180</td></tr>
-<tr><td><font size=3>8)</td><td><font size=3>Josh Oliver            </td><td><font size=3> 175</td></tr>
-<tr><td><font size=3>9)</td><td><font size=3>Davis Allen            </td><td><font size=3> 150</td></tr>
-<tr><td><font size=3>10)</td><td><font size=3>Hunter Long            </td><td><font size=3> 125</td></tr>
-<tr><td><font size=3>11)</td><td><font size=3>Jonnu Smith            </td><td><font size=3> 125</td></tr>
-<tr><td><font size=3>12)</td><td><font size=3>Brock Wright           </td><td><font size=3> 125</td></tr>
-<tr><td><font size=3>13)</td><td><font size=3>Noah Fant              </td><td><font size=3> 100</td></tr>
-<tr><td><font size=3>14)</td><td><font size=3>Cade Otton             </td><td><font size=3>  95</td></tr>
-<tr><td><font size=3>15)</td><td><font size=3>Darnell Washington     </td><td><font size=3>  85</td></tr>
+<tr><td><font size=3>1)</td><td><font size=3>Theo Johnson           </td><td><font size=3> 405</td></tr>
+<tr><td><font size=3>2)</td><td><font size=3>Pat Freiermuth         </td><td><font size=3> 330</td></tr>
+<tr><td><font size=3>3)</td><td><font size=3>Jake Tonges            </td><td><font size=3> 325</td></tr>
+<tr><td><font size=3>4)</td><td><font size=3>Darren Waller          </td><td><font size=3> 285</td></tr>
+<tr><td><font size=3>5)</td><td><font size=3>Juwan Johnson          </td><td><font size=3> 270</td></tr>
+<tr><td><font size=3>6)</td><td><font size=3>Noah Fant              </td><td><font size=3> 200</td></tr>
+<tr><td><font size=3>7)</td><td><font size=3>Daniel Bellinger       </td><td><font size=3> 190</td></tr>
+<tr><td><font size=3>8)</td><td><font size=3>David Njoku            </td><td><font size=3> 180</td></tr>
+<tr><td><font size=3>9)</td><td><font size=3>Josh Oliver            </td><td><font size=3> 175</td></tr>
+<tr><td><font size=3>10)</td><td><font size=3>Davis Allen            </td><td><font size=3> 150</td></tr>
+<tr><td><font size=3>11)</td><td><font size=3>Tyler Higbee           </td><td><font size=3> 125</td></tr>
+<tr><td><font size=3>12)</td><td><font size=3>Charlie Kolar          </td><td><font size=3> 125</td></tr>
+<tr><td><font size=3>13)</td><td><font size=3>Hunter Long            </td><td><font size=3> 125</td></tr>
+<tr><td><font size=3>14)</td><td><font size=3>Jonnu Smith            </td><td><font size=3> 125</td></tr>
+<tr><td><font size=3>15)</td><td><font size=3>Brock Wright           </td><td><font size=3> 125</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Kickers</td></tr>
 <tr><td><font size=3>Nick Folk              </td><td><font size=3> 750</td></tr>
-<tr><td><font size=3>Eddy Pineiro           </td><td><font size=3> 745</td></tr>
-<tr><td><font size=3>Will Reichard          </td><td><font size=3> 620</td></tr>
-<tr><td><font size=3>Chad Ryland            </td><td><font size=3> 575</td></tr>
-<tr><td><font size=3>Blake Grupe            </td><td><font size=3> 565</td></tr>
-<tr><td><font size=3>Matt Prater            </td><td><font size=3> 520</td></tr>
-<tr><td><font size=3>Evan McPherson         </td><td><font size=3> 485</td></tr>
-<tr><td><font size=3>Riley Patterson        </td><td><font size=3> 480</td></tr>
-<tr><td><font size=3>Daniel Carlson         </td><td><font size=3> 460</td></tr>
-<tr><td><font size=3>Cairo Santos           </td><td><font size=3> 450</td></tr>
-<tr><td><font size=3>Joshua Karty           </td><td><font size=3> 440</td></tr>
+<tr><td><font size=3>Will Reichard          </td><td><font size=3> 715</td></tr>
+<tr><td><font size=3>Chad Ryland            </td><td><font size=3> 665</td></tr>
+<tr><td><font size=3>Blake Grupe            </td><td><font size=3> 600</td></tr>
+<tr><td><font size=3>Cam Little             </td><td><font size=3> 580</td></tr>
+<tr><td><font size=3>Evan McPherson         </td><td><font size=3> 580</td></tr>
+<tr><td><font size=3>Matt Gay               </td><td><font size=3> 570</td></tr>
+<tr><td><font size=3>Riley Patterson        </td><td><font size=3> 570</td></tr>
+<tr><td><font size=3>Matt Prater            </td><td><font size=3> 540</td></tr>
+<tr><td><font size=3>Cairo Santos           </td><td><font size=3> 525</td></tr>
+<tr><td><font size=3>Daniel Carlson         </td><td><font size=3> 490</td></tr>
+<tr><td><font size=3>Joshua Karty           </td><td><font size=3> 460</td></tr>
 <tr><td><font size=3>Andre Szmyt            </td><td><font size=3> 435</td></tr>
-<tr><td><font size=3>Cam Little             </td><td><font size=3> 415</td></tr>
-<tr><td><font size=3>John Parker Romo       </td><td><font size=3> 375</td></tr>
-<tr><td><font size=3>Jake Moody             </td><td><font size=3> 320</td></tr>
+<tr><td><font size=3>John Parker Romo       </td><td><font size=3> 415</td></tr>
+<tr><td><font size=3>Graham Gano            </td><td><font size=3> 330</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Rookies</td></tr>
-<tr><td><font size=3>Tory Horton            </td><td><font size=3> 475</td></tr>
-<tr><td><font size=3>Oronde Gadsden         </td><td><font size=3> 295</td></tr>
+<tr><td><font size=3>Tory Horton            </td><td><font size=3> 625</td></tr>
+<tr><td><font size=3>Chimere Dike           </td><td><font size=3> 380</td></tr>
+<tr><td><font size=3>Oronde Gadsden         </td><td><font size=3> 325</td></tr>
 <tr><td><font size=3>Jaylin Lane            </td><td><font size=3> 230</td></tr>
-<tr><td><font size=3>Chimere Dike           </td><td><font size=3> 180</td></tr>
 <tr><td><font size=3>Isaac TeSlaa           </td><td><font size=3> 150</td></tr>
+<tr><td><font size=3>Terrance Ferguson      </td><td><font size=3> 125</td></tr>
+<tr><td><font size=3>Elijah Arroyo          </td><td><font size=3> 100</td></tr>
 <tr><td><font size=3>Pat Bryant             </td><td><font size=3> 100</td></tr>
 <tr><td><font size=3>Mitchell Evans         </td><td><font size=3> 100</td></tr>
-<tr><td><font size=3>Terrance Ferguson      </td><td><font size=3> 100</td></tr>
 <tr><td><font size=3>Jaylin Noel            </td><td><font size=3>  85</td></tr>
 <tr><td><font size=3>Savion Williams        </td><td><font size=3>  75</td></tr>
 <tr><td><font size=3>Jackson Hawes          </td><td><font size=3>  50</td></tr>
 <tr><td><font size=3>Gunnar Helm            </td><td><font size=3>  50</td></tr>
 <tr><td><font size=3>Konata Mumpfield       </td><td><font size=3>  50</td></tr>
 <tr><td><font size=3>Raheim Sanders         </td><td><font size=3>  50</td></tr>
-<tr><td><font size=3>Isaiah Bond            </td><td><font size=3>  25</td></tr>
 </table>
 </td></tr></table>
