--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
 <a href="week6.html"><b>6</b></a>
 <a href="week7.html"><b>7</b></a>
 <a href="week8.html"><b>8</b></a>
-<a href="week9.html"><b>9P</b></a><br>
+<a href="week9.html"><b>9</b></a>
+<a href="week10.html"><b>10P</b></a><br>
 <a href="roster.html"><b>Roster</b></a><br>
 <a href="pickups.html"><b>Pickups & Trades</b></a><br>
 <a href="leader.html"><b>Current Leaderboard</b></a><br>
@@ -67,42 +68,42 @@
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Low</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Weeks Won</b></font></td></tr>
 <tr><td><font size=2>Rich(5)</font></td>
-    <td><font size=2>6</font></td>
+    <td><font size=2>7</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>5535</font></td>
-    <td><font size=2>4370</font></td>
+    <td><font size=2>6095</font></td>
+    <td><font size=2>4640</font></td>
     <td><font size=2>945</font></td>
     <td><font size=2>455</font></td>
     <td><font size=2>1</font></td>
-<tr><td><font size=2>Matthew(7)</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>5100</font></td>
-    <td><font size=2>4795</font></td>
-    <td><font size=2>1245</font></td>
-    <td><font size=2>285</font></td>
-    <td><font size=2>1</font></td>
 <tr><td><font size=2>Randy(9)</font></td>
+    <td><font size=2>5</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>4780</font></td>
-    <td><font size=2>4235</font></td>
+    <td><font size=2>5690</font></td>
+    <td><font size=2>4985</font></td>
     <td><font size=2>915</font></td>
     <td><font size=2>265</font></td>
     <td><font size=2>0</font></td>
-<tr><td><font size=2>States(3)</font></td>
-    <td><font size=2>3</font></td>
+<tr><td><font size=2>Matthew(7)</font></td>
+    <td><font size=2>4</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>4600</font></td>
-    <td><font size=2>5960</font></td>
+    <td><font size=2>5675</font></td>
+    <td><font size=2>5855</font></td>
+    <td><font size=2>1245</font></td>
+    <td><font size=2>285</font></td>
+    <td><font size=2>1</font></td>
+<tr><td><font size=2>States(3)</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>5</font></td>
+    <td><font size=2>4930</font></td>
+    <td><font size=2>6215</font></td>
     <td><font size=2>890</font></td>
     <td><font size=2>180</font></td>
     <td><font size=2>2</font></td>
 <tr><td><font size=2>Steven(1)</font></td>
-    <td><font size=2>1</font></td>
+    <td><font size=2>2</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>5295</font></td>
-    <td><font size=2>6015</font></td>
+    <td><font size=2>5970</font></td>
+    <td><font size=2>6550</font></td>
     <td><font size=2>830</font></td>
     <td><font size=2>560</font></td>
     <td><font size=2>0</font></td>
@@ -115,44 +116,44 @@
     <td><font size=2></font></td>
     <td><font size=2></font></td></tr>
 <tr><td><font size=2>Grant(6)</font></td>
-    <td><font size=2>7</font></td>
+    <td><font size=2>8</font></td>
     <td><font size=2>1</font></td>
-    <td><font size=2>6185</font></td>
-    <td><font size=2>4880</font></td>
+    <td><font size=2>7245</font></td>
+    <td><font size=2>5455</font></td>
     <td><font size=2>1070</font></td>
     <td><font size=2>340</font></td>
-    <td><font size=2>2</font></td>
+    <td><font size=2>3</font></td>
 <tr><td><font size=2>Roger(10)</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>5505</font></td>
-    <td><font size=2>5395</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>6255</font></td>
+    <td><font size=2>6305</font></td>
     <td><font size=2>1120</font></td>
     <td><font size=2>295</font></td>
     <td><font size=2>1</font></td>
 <tr><td><font size=2>Sam(4)</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>4470</font></td>
-    <td><font size=2>4640</font></td>
+    <td><font size=2>5</font></td>
+    <td><font size=2>4725</font></td>
+    <td><font size=2>4970</font></td>
     <td><font size=2>785</font></td>
-    <td><font size=2>305</font></td>
+    <td><font size=2>255</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Mike(2)</font></td>
     <td><font size=2>3</font></td>
-    <td><font size=2>5</font></td>
-    <td><font size=2>4690</font></td>
-    <td><font size=2>5330</font></td>
+    <td><font size=2>6</font></td>
+    <td><font size=2>5225</font></td>
+    <td><font size=2>6005</font></td>
     <td><font size=2>860</font></td>
     <td><font size=2>160</font></td>
     <td><font size=2>1</font></td>
 <tr><td><font size=2>John(8)</font></td>
     <td><font size=2>3</font></td>
-    <td><font size=2>5</font></td>
-    <td><font size=2>4510</font></td>
-    <td><font size=2>5050</font></td>
+    <td><font size=2>6</font></td>
+    <td><font size=2>4780</font></td>
+    <td><font size=2>5610</font></td>
     <td><font size=2>795</font></td>
-    <td><font size=2>425</font></td>
+    <td><font size=2>270</font></td>
     <td><font size=2>0</font></td>
 </table>
 </table>
