--- a/pickups.html
+++ b/pickups.html
@@ -18,8 +18,8 @@
 <tr>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Theo Johnson/Tre' Harris</td>
+<td width=50>11/5</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>2)</td>
@@ -99,8 +99,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>3)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Sam Darnold/Jordan James</td>
+<td width=50>11/4</td>
 </tr></table></td>
 </tr>
 <tr>
@@ -222,8 +222,8 @@
 <tr>
 <td><table><tr>
 <td width=15>3)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Troy Franklin/Ben Sauls</td>
+<td width=50>11/4</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>3)</td>
@@ -338,7 +338,8 @@ Randy - Jake Ferguson/Braelon Allen (10/4)<br>
 John - Rico Dowdle/Trey Benson (10/7)<br>
 Sam - Michael Carter/Spencer Shrader (10/7)<br>
 John - Jason Myers/Graham Gano (10/10)<br>
-Grant - Tyrone Tracy/Cam Skattebo (10/29)
+Grant - Tyrone Tracy/Cam Skattebo (10/29)<br>
+Roger - Rashid Shaheed/Mike Evans (11/4)
 </td></tr>
 <tr><td width=50>9/16</td>
 <td width=600>
