--- a/roster.html
+++ b/roster.html
@@ -16,11 +16,12 @@
 <tr><td> SF</td><td>Brian Robinson         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>SEA</td><td>Jaxon Smith-Njigba     </td></tr>
-<tr><td> LV</td><td>Jakobi Meyers          </td></tr>
+<tr><td>JAX</td><td>Jakobi Meyers          </td></tr>
 <tr><td>IND</td><td>Michael Pittman        </td></tr>
 <tr><td> GB</td><td>Romeo Doubs            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> KC</td><td>Travis Kelce           </td></tr>
+<tr><td>NYG</td><td>Theo Johnson           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> KC</td><td>Harrison Butker        </td></tr>
 <tr><td height=9></td><td></td></tr>
@@ -28,7 +29,6 @@
 <tr><td>CAR</td><td>Ryan Fitzgerald        </td></tr>
 <tr><td>JAX</td><td>Bhayshul Tuten         </td></tr>
 <tr><td>CHI</td><td>Luther Burden          </td></tr>
-<tr><td>LAC</td><td>Tre' Harris            </td></tr>
 <tr><td>CHI</td><td>Kyle Monangai          </td></tr>
 </table>
 </td>
@@ -66,6 +66,7 @@
 <tr><td>WAS</td><td>Jayden Daniels         </td></tr>
 <tr><td>ARI</td><td>Kyler Murray           </td></tr>
 <tr><td>WAS</td><td>Marcus Mariota         </td></tr>
+<tr><td>SEA</td><td>Sam Darnold            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>MIA</td><td>De'Von Achane          </td></tr>
 <tr><td>MIN</td><td>Aaron Jones            </td></tr>
@@ -84,7 +85,6 @@
 <tr><td>PIT</td><td>Kaleb Johnson          </td></tr>
 <tr><td> NE</td><td>Andy Borregales        </td></tr>
 <tr><td> GB</td><td>Matthew Golden         </td></tr>
-<tr><td> SF</td><td>Jordan James           </td></tr>
 <tr><td>MIA</td><td>Ollie Gordon           </td></tr>
 </table>
 </td>
@@ -191,6 +191,7 @@
 <tr><td> KC</td><td>Xavier Worthy          </td></tr>
 <tr><td>WAS</td><td>Deebo Samuel           </td></tr>
 <tr><td>LAC</td><td>Keenan Allen           </td></tr>
+<tr><td>DEN</td><td>Troy Franklin          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> SF</td><td>George Kittle          </td></tr>
 <tr><td height=9></td><td></td></tr>
@@ -199,7 +200,6 @@
 <tr><td> NO</td><td>Tyler Shough           </td></tr>
 <tr><td>DAL</td><td>Jaydon Blue            </td></tr>
 <tr><td>CLE</td><td>Shedeur Sanders        </td></tr>
-<tr><td>PIT</td><td>Ben Sauls              </td></tr>
 <tr><td>IND</td><td>DJ Giddens             </td></tr>
 <tr><td>CLE</td><td>Harold Fannin          </td></tr>
 </table>
@@ -271,11 +271,11 @@
 <tr><td>BUF</td><td>James Cook             </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>LAR</td><td>Puka Nacua             </td></tr>
-<tr><td> TB</td><td>Mike Evans             </td></tr>
 <tr><td>MIA</td><td>Jaylen Waddle          </td></tr>
 <tr><td>BAL</td><td>Zay Flowers            </td></tr>
 <tr><td>MIN</td><td>Jordan Addison         </td></tr>
 <tr><td>BUF</td><td>Khalil Shakir          </td></tr>
+<tr><td>SEA</td><td>Rashid Shaheed         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>BUF</td><td>Dalton Kincaid         </td></tr>
 <tr><td>BUF</td><td>Dawson Knox            </td></tr>
