--- a/roster.html
+++ b/roster.html
@@ -64,7 +64,6 @@
 <table border=0 cellspacing=0 width=204>
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>States (3)</b></font></td></tr>
 <tr><td>WAS</td><td>Jayden Daniels         </td></tr>
-<tr><td>ARI</td><td>Kyler Murray           </td></tr>
 <tr><td>WAS</td><td>Marcus Mariota         </td></tr>
 <tr><td>SEA</td><td>Sam Darnold            </td></tr>
 <tr><td height=9></td><td></td></tr>
@@ -86,6 +85,7 @@
 <tr><td> NE</td><td>Andy Borregales        </td></tr>
 <tr><td> GB</td><td>Matthew Golden         </td></tr>
 <tr><td>MIA</td><td>Ollie Gordon           </td></tr>
+<tr><td>LAC</td><td>Oronde Gadsden         </td></tr>
 </table>
 </td>
 </tr>
@@ -284,10 +284,10 @@
 <tr><td>HOU</td><td>Ka'imi Fairbairn       </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>LAC</td><td>Omarion Hampton        </td></tr>
-<tr><td>JAX</td><td>Travis Hunter          </td></tr>
 <tr><td>WAS</td><td>Jacory Croskey-Merritt </td></tr>
 <tr><td>CLE</td><td>Quinshon Judkins       </td></tr>
 <tr><td> KC</td><td>Brashard Smith         </td></tr>
+<tr><td>SEA</td><td>Tory Horton            </td></tr>
 </table>
 </td>
 <td>
