--- a/pickups.html
+++ b/pickups.html
@@ -339,7 +339,9 @@ John - Rico Dowdle/Trey Benson (10/7)<br>
 Sam - Michael Carter/Spencer Shrader (10/7)<br>
 John - Jason Myers/Graham Gano (10/10)<br>
 Grant - Tyrone Tracy/Cam Skattebo (10/29)<br>
-Roger - Rashid Shaheed/Mike Evans (11/4)
+Roger - Rashid Shaheed/Mike Evans (11/4)<br>
+Roger - Tory Horton/Travis Hunter (11/5)<br>
+States - Oronde Gadsden/Kyler Murray (11/5)
 </td></tr>
 <tr><td width=50>9/16</td>
 <td width=600>
