--- a/week10.html
+++ b/week10.html
@@ -50,14 +50,14 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>John (8)</b></font></td></tr>
-<tr><td>Mahomes</td>       <td></td><td align=right>0</td></tr>
-<tr><td>CBrown</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Fields</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Charbonnet</td>    <td></td><td align=right>0</td></tr>
-<tr><td>Jennings</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Pickens</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Dowdle</td>        <td></td><td align=right>0</td></tr>
+<tr><td>ABrown</td>        <td></td><td align=right>0</td></tr>
+<tr><td>TJohnson</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Ertz</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Slye</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Ward</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Myers</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Gabriel</td>       <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
