--- a/thousand.html
+++ b/thousand.html
@@ -177,6 +177,12 @@
     <td>1260</td>
     <td>States</td>
     <td>595</td></tr>
+<tr><td>2025</td>
+    <td>Week 10</td>
+    <td>Randy Edwards</td>
+    <td>1255</td>
+    <td>States</td>
+    <td>660</td></tr>
 <tr><td>2016</td>
     <td>Week 17</td>
     <td>John Heinzelmann</td>
@@ -261,6 +267,12 @@
     <td>1195</td>
     <td>Randy</td>
     <td>860</td></tr>
+<tr><td>2025</td>
+    <td>Week 10</td>
+    <td>Matthew Edwards</td>
+    <td>1195</td>
+    <td>Steven</td>
+    <td>495</td></tr>
 <tr><td>1994</td>
     <td>Week 1</td>
     <td>Randy Edwards</td>
