--- a/pickups.html
+++ b/pickups.html
@@ -353,4 +353,9 @@ Randy - Travis Etienne
 States - Ollie Gordon<br>
 John - Zach Ertz
 </td></tr>
+<tr><td width=50>11/11</td>
+<td width=600>
+Sam - Justin Jefferson, Breece Hall, Isaiah Davis<br>
+Randy - Nico Collins, Kyren Williams, Blake Corum
+</td></tr>
 </table>
