--- a/roster.html
+++ b/roster.html
@@ -57,7 +57,7 @@
 <tr><td> SF</td><td>Eddy Pineiro           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>IND</td><td>Tyler Warren           </td></tr>
-<tr><td>CLE</td><td>Dylan Sampson          </td></tr>
+<tr><td>TEN</td><td>Chimere Dike           </td></tr>
 </table>
 </td>
 <td valign=top>
