--- a/pickups.html
+++ b/pickups.html
@@ -59,8 +59,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>5)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Chimere Dike/Dylan Sampson</td>
+<td width=50>11/15</td>
 </tr></table></td>
 </tr>
 <tr>
