--- a/pickups.html
+++ b/pickups.html
@@ -341,7 +341,8 @@ John - Jason Myers/Graham Gano (10/10)<br>
 Grant - Tyrone Tracy/Cam Skattebo (10/29)<br>
 Roger - Rashid Shaheed/Mike Evans (11/4)<br>
 Roger - Tory Horton/Travis Hunter (11/5)<br>
-States - Oronde Gadsden/Kyler Murray (11/5)
+States - Oronde Gadsden/Kyler Murray (11/5)<br>
+Matthew - Cam Little/JK Dobbins (11/18)
 </td></tr>
 <tr><td width=50>9/16</td>
 <td width=600>
