--- a/roster.html
+++ b/roster.html
@@ -185,7 +185,6 @@
 <tr><td>BAL</td><td>Derrick Henry          </td></tr>
 <tr><td>IND</td><td>Jonathan Taylor        </td></tr>
 <tr><td>DET</td><td>David Montgomery       </td></tr>
-<tr><td>DEN</td><td>JK Dobbins             </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>CIN</td><td>Tee Higgins            </td></tr>
 <tr><td> KC</td><td>Xavier Worthy          </td></tr>
@@ -196,6 +195,7 @@
 <tr><td> SF</td><td>George Kittle          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>LAC</td><td>Cameron Dicker         </td></tr>
+<tr><td>JAX</td><td>Cam Little             </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> NO</td><td>Tyler Shough           </td></tr>
 <tr><td>DAL</td><td>Jaydon Blue            </td></tr>
