--- a/week12.html
+++ b/week12.html
@@ -52,12 +52,12 @@
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Randy (9)</b></font></td></tr>
 <tr><td>Maye</td>          <td></td><td align=right>0</td></tr>
 <tr><td>KWilliams</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Etienne</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Henderson</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Lamb</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Collins</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Bowers</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Bates</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Henderson</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Dart</td>          <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
@@ -95,14 +95,14 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Grant (6)</b></font></td></tr>
-<tr><td>Nix</td>           <td></td><td align=right>0</td></tr>
+<tr><td>Purdy</td>         <td></td><td align=right>0</td></tr>
 <tr><td>McCaffrey</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Jacobs</td>        <td></td><td align=right>0</td></tr>
-<tr><td>London</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Sutton</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Tracy</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Pearsall</td>      <td></td><td align=right>0</td></tr>
+<tr><td>Boutte</td>        <td></td><td align=right>0</td></tr>
 <tr><td>McBride</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Boswell</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Harvey</td>        <td></td><td align=right>0</td></tr>
+<tr><td>MTaylor</td>       <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
