--- a/roster.html
+++ b/roster.html
@@ -211,10 +211,10 @@
 <tr><td>NYJ</td><td>Justin Fields          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>CIN</td><td>Chase Brown            </td></tr>
-<tr><td> NO</td><td>Alvin Kamara           </td></tr>
 <tr><td>CAR</td><td>Chuba Hubbard          </td></tr>
 <tr><td>SEA</td><td>Zach Charbonnet        </td></tr>
 <tr><td>CAR</td><td>Rico Dowdle            </td></tr>
+<tr><td> GB</td><td>Emanuel Wilson         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>PHI</td><td>AJ Brown               </td></tr>
 <tr><td>NYJ</td><td>Garrett Wilson         </td></tr>
