--- a/pickups.html
+++ b/pickups.html
@@ -239,8 +239,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>4)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Emanuel Wilson/Alvin Kamara</td>
+<td width=50>11/20</td>
 </tr></table></td>
 </tr>
 <tr>
